--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 	},
 	"homepage": "https://github.com/koushik0004/mern-chat-app#readme",
 	"dependencies": {
+		"colors": "^1.4.0",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"mongoose": "^6.4.2",
 		"nodemon": "^2.0.18"
 	}
 }
