--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-	"name": "talk-a-tive",
-	"version": "1.0.0",
-	"description": "",
-	"main": "backend/server.js",
-	"scripts": {
-		"start:backend": "nodemon backend/server.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/koushik0004/mern-chat-app.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/koushik0004/mern-chat-app/issues"
-	},
-	"homepage": "https://github.com/koushik0004/mern-chat-app#readme",
-	"dependencies": {
-		"colors": "^1.4.0",
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
-		"mongoose": "^6.4.2",
-		"nodemon": "^2.0.18"
-	}
+  "name": "talk-a-tive",
+  "version": "1.0.0",
+  "description": "",
+  "main": "backend/server.js",
+  "scripts": {
+    "start:backend": "nodemon backend/server.js",
+    "start:frontend": "yarn --cwd ./frontend/ start:frontend",
+    "start:dev": "concurrently --kill-others \"yarn start:backend\" \"yarn start:frontend\"",
+    "start:app-dev": "npm-run-all --parallel start:backend start:frontend"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/koushik0004/mern-chat-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/koushik0004/mern-chat-app/issues"
+  },
+  "homepage": "https://github.com/koushik0004/mern-chat-app#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.2",
+    "nodemon": "^2.0.18"
+  },
+  "devDependencies": {
+    "concurrently": "^7.2.2",
+    "npm-run-all": "^4.1.5"
+  }
 }
