--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=6001
 MONGO_URI=mongodb+srv://admin0004:admin0004@cluster0.tamcp.mongodb.net/mern-chats?retryWrites=true&w=majority
+JWT_SECRET=ChatApplication
